version 1.9.4, in progress
- Add an --accessors option to the "varlist" command, to
  expose the list of currently available accessor ("dollar")
  variables
- Add more panel data graphing options -- time-series of
  group means and boxplots by group -- and redesign the
  GUI for panel plots
- GUI icon view: provide a graphical representation for
  saved "bundles"
- GUI dialog for calling user-defined functions: several
  improvements
- GUI access to X-12-ARIMA: give option of writing and
  editing x12a .spc file
- New function, inlist(): gives the position of a series
  within a named list or zero if the series is not present
- New function, isconst(): determines whether a series or
  vector has a constant value, and optionally tests for
  either time-invariance or cross-sectional invariance for
  panel-data series
- "estimate" command: document the --quiet flag; and also
  enable the --quiet option for "system"
- "summary" command: add an option to print summary stats
  for the columns of a named matrix
- New function, errmsg(): returns the gretl error message
  associated with a given integer error code
- New function, rownames(): complements the colnames()
  function for matrices
- New function mrls(); implements restricted least squares
  estimation for data in matrix form
- The sdc() function (column standard deviations): add an
  optional second argument to control the divisor
- New "set" variable, matrix_mask, which can be used to
  control the included observations when constructing
  matrices from series
- Accessors $test and $pvalue: generalize to allow matrix
  values (e.g. from the coint2 command); also ensure that
  these values get recorded when using "restrict" in
  connection with a system estimator such as SUR
- "catch" modifier for commands: make this catch a wider
  range of errors
- Functions corr(), cov() and fcstats(): accept two vector
  arguments in place of two series
- Allow deletion of locale matrices within functions