@@ -681,14 +681,6 @@
   pages =	 {473--522}
 }
 
-@Book{keller_etal08}
-  author =	 {Keller, Alexander and Heinrich, Stefan and Niederreiter, Harald},
-  year =	 2008,
-  title =	 {{M}onte {C}arlo and Quasi-{M}onte {C}arlo Methods 2006},
-  publisher =	 {Springer},
-  address =	 {Berlin}
-}
-
 @Article{kiviet86,
   author =	 {Kiviet, J. F.},
   year =	 1986,
@@ -1227,6 +1219,14 @@
                   Models},
   publisher =	 {Cambridge University Press},
   address =	 {Cambridge}
+}
+
+@Book{keller_etal08}
+  author =	 {Keller, Alexander and Heinrich, Stefan and Niederreiter, Harald},
+  year =	 2008,
+  title =	 {{M}onte {C}arlo and Quasi-{M}onte {C}arlo Methods 2006},
+  publisher =	 {Springer},
+  address =	 {Berlin}
 }
 
 @Book{mandl-huskova94,
