@@ -8,8 +8,8 @@
 /* Extra floating-point GMP routines? */
 #define HAVE_MPFR 1
 
-/* sse2: let's assume so */
-#define USE_SSE2 1
+/* sse2: not yet */
+/* #undef USE_SSE2 */
 
 /* X-12-ARIMA support? */
 #define HAVE_X12A 1
